# vault-check

./: .autoheader_cache  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  TASKS.md  docker-compose.yml  pyproject.toml  test_output.json  vault_check_all_create_dump_20251119_034221.md  vault_check_all_create_dump_20251119_034221.sha256  vault_check_all_create_dump_20251119_034226.md  vault_check_all_create_dump_20251119_034226.sha256
.github/workflows/: publish.yml  test.yml
docs/: ADR.md
src/vault_check/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  http_client.py  logging.py  output.py  registry.py  reporting.py  runner.py  secrets.py  signals.py  utils.py  verifier_registry.py
src/vault_check/verifiers/: __init__.py  accounts.py  base.py  database.py  google.py  jwt.py  razorpay.py  redis.py  session_key.py  telegram.py  webhook.py
tests/e2e/: __init__.py  e2e.env  invalid.env  test_e2e.py  test_redis_verifier.py
tests/integration/: __init__.py  test.env  test_cli.py  test_cli_integration.py  test_verifier_chain.py
tests/unit/: __init__.py  test_banner_coverage.py  test_bootstrap.py  test_bootstrap_coverage.py  test_cli.py  test_cli_coverage.py  test_cli_project_path.py  test_dashboard_coverage.py  test_exceptions.py  test_heuristics.py  test_http_client.py  test_http_client_coverage.py  test_http_client_more.py  test_jwt_secret_verifier.py  test_logging.py  test_main.py  test_main_entrypoint.py  test_output.py  test_plugins_coverage.py  test_runner.py  test_runner_auto_discovery.py  test_runner_coverage.py  test_secrets.py  test_session_key_verifier.py  test_signals.py  test_signals_coverage.py  test_telegram_bot_verifier.py  test_utils.py
tests/unit/verifiers/: __init__.py  test_accounts.py  test_base.py  test_database.py  test_google.py  test_google_razorpay.py  test_jwt.py  test_razorpay.py  test_redis.py  test_s3.py  test_session_key.py  test_smtp.py  test_telegram.py  test_telegram_session.py  test_verifiers_coverage.py  test_webhook.py
